--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -1,10 +1,106 @@
-.cirlce-img {
-  width: 70px;
-  height: 70px;
-  border-radius: 35%;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-.cirlce-img img {
+
+header {
+  background-color: #262626;
+}
+li {
+  list-style: none;
+}
+a,
+.nav-branding {
+  text-decoration: none;
+  color: rgb(231, 154, 9);
+}
+.nav-img {
   width: 70px;
   height: 70px;
-  border-radius: 35%;
+  border-radius: 35px;
+}
+.nav-menu a {
+  position: relative;
+  color: white;
+  padding: 0 10px;
+  letter-spacing: 0.5px;
+}
+.nav-menu a:after {
+  content: "";
+  position: absolute;
+  background-color: rgb(236, 41, 6);
+  height: 3px;
+  width: 0;
+  left: 0;
+  bottom: -10px;
+  transition: 0.6s;
+}
+.nav-menu a:hover:after {
+  width: 100%;
+}
+.navbar {
+  min-height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 24px;
+}
+.nav-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 60px;
+}
+.nav-branding {
+  font-size: 2rem;
+}
+.nav-link {
+  transition: 0.7s case;
+}
+
+.hamburger {
+  display: none;
+  cursor: pointer;
+}
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: white;
+}
+@media (max-width: 678px) {
+  .hamburger {
+    display: block;
+  }
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+  .nav-menu {
+    position: fixed;
+    left: -100%;
+    top: 70px;
+    gap: 5px;
+    flex-direction: column;
+    background-color: #262626;
+    width: 100%;
+    text-align: center;
+    transition: 0.3s;
+    padding: 20px 0;
+  }
+  nav-iteam {
+    margin: 5px 0;
+  }
+  .nav-menu.active {
+    left: 0;
+  }
 }
